Add Vercel frontend URL to CORS allowed origins